--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -6,3 +6,10 @@ description: ""
 {% include JB/setup %}
 
 ## Who am I?
+
+Neh, fooled you. If you're really that interested in knowing more:
+<a href="https://www.linkedin.com/in/aabhassharma">LinkedIn</a>
+
+And if you really want to know a lot more, go like all my photos (but please don't really):
+<a href="https://www.instagram.com/aabhas17/">Instagram</a>
+
